scrollbar fixed

--- a/Assets/About-Makeathon/assets/css/index.css
+++ b/Assets/About-Makeathon/assets/css/index.css
@@ -8,6 +8,9 @@
     url("https://fonts.cdnfonts.com/s/51075/MechanismoRegular-p7ywa.woff")
       format("woff");
 }
+body::-webkit-scrollbar {
+  display: none;
+}
 #about-makeathon {
 	width: 100vw;
 	background: url("../Images/abt_us.png");
